# voice_assistant_bot

./: pyproject.toml
voice_assistant_bot/: ai.py  bot.py  config.py  db.py
